Inclusao de codigo

--- a/src/app/components/pesquisa/pesquisa.component.html
+++ b/src/app/components/pesquisa/pesquisa.component.html
@@ -15,6 +15,6 @@
   </ion-header>
 
   <div id="container">
-    
+    <ion-button (click) = "pesquisar()"> Pesquisar</ion-button>
   </div>
 </ion-content>
