--- a/src/app/components/pesquisa/pesquisa.component.html
+++ b/src/app/components/pesquisa/pesquisa.component.html
@@ -44,8 +44,8 @@
     </ion-grid>
     <ion-grid>
       <ion-row class="ion-align-items-center">
-        <ion-col class="ion-align-self-center" size="6">
-          <ion-button (click) = "pesquisar()" [disabled]="permitePesquisar()">Pesquisar</ion-button>
+        <ion-col class="ion-align-self-center">
+          <ion-button (click) = "pesquisar()" [disabled]="permitePesquisar()" expand="block">Pesquisar</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
